# catboost_inference

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
container/: inference.py  serve
src/: Dockerfile  build_and_push.sh
src/code/: predictor.py  serve  train
src/inference/: __init__.py  predictor.py  serve
src/utils/: metrics.py
tests/: conftest.py
tests/src/: test_predictor.py
tests/src/utils/: test_metrics.py
